# Algorithms-Data-Structures-Project

./: Additional_functions_2.c  CMakeLists.txt  Projeto2_main.c
proj2/: Additional_functions_1.c  Additional_functions_2.c  Header_file.h  Projeto2_main.c
